--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -1,6 +1,25 @@
 ---
 import Layout from 'layouts/Layout.astro'
 import img from 'public/images/og-resume.jpg'
+
+const env = import.meta.env.VERCEL_ENV
+let urlHome = ''
+
+switch (env) {
+	case undefined:
+	case 'development':
+		urlHome = 'http://localhost:3000'
+		break
+	case 'preview':
+		urlHome = `https://${import.meta.env.VERCEL_URL}`
+		break
+	case 'production':
+		urlHome = `${Astro.site}/resume`
+		break
+
+	default:
+		break
+}
 ---
 
 <Layout
@@ -8,6 +27,20 @@ import img from 'public/images/og-resume.jpg'
 	description='Self-learned, always evolving, front-end/ full-stack developer focused to create engaging and intuitive software.'
 	image={img}
 >
+	<div class='sticky top-0 h-0'>
+		<a
+			href={urlHome}
+			class='group absolute right-4 top-4 h-10 w-10 rounded-full bg-blue-100 p-2 transition-all hover:bg-blue-600 active:translate-y-1'
+		>
+			<svg viewBox='0 0 576 512' class='text-blue-500 group-hover:text-blue-100'>
+				<path
+					fill='currentColor'
+					d='M303.5 5.7c-9-7.6-22.1-7.6-31.1 0l-264 224c-10.1 8.6-11.3 23.7-2.8 33.8s23.7 11.3 33.8 2.8L64 245.5V432c0 44.2 35.8 80 80 80H432c44.2 0 80-35.8 80-80V245.5l24.5 20.8c10.1 8.6 25.3 7.3 33.8-2.8s7.3-25.3-2.8-33.8l-264-224zM112 432V204.8L288 55.5 464 204.8V432c0 17.7-14.3 32-32 32H384V312c0-22.1-17.9-40-40-40H232c-22.1 0-40 17.9-40 40V464H144c-17.7 0-32-14.3-32-32zm128 32V320h96V464H240z'
+				></path>
+			</svg></a
+		>
+	</div>
+
 	<div class='mx-auto max-w-screen-xl bg-gray-900 shadow-xl shadow-gray-600'>
 		<section
 			id='header'
