--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -42,7 +42,7 @@ switch (env) {
 	<div class='mx-auto max-w-screen-xl bg-gray-900 shadow-xl shadow-gray-600'>
 		<section
 			id='header'
-			class='space-y-2 border-r-8 border-gray-200 bg-gray-700 px-2 pb-4 pt-8 md:space-y-4 md:border-r-[12px]'
+			class='space-y-2 border-r-[12px] border-gray-200 bg-gray-600 px-2 pb-4 pt-8 md:space-y-4 md:border-r-8'
 		>
 			<h1 class='text-center font-head text-5xl md:text-6xl'>Alberto R Cahyantara</h1>
 			<h2 class='text-center font-body text-xl text-blue-100 md:text-2xl'>
@@ -52,7 +52,7 @@ switch (env) {
 
 		<div
 			id='sub-header'
-			class='flex justify-center gap-2 border-r-2 border-gray-200 bg-gray-800 px-4 pb-4 pt-3 md:gap-4 md:border-r-4'
+			class='flex justify-center gap-2 border-r-4 border-gray-200 bg-gray-800 px-4 pb-4 pt-3 md:gap-4 md:border-r-2'
 		>
 			<section id='contacts' class='w-72'>
 				<p
