--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -2,6 +2,8 @@
 import Layout from 'layouts/Layout.astro'
 import img from 'public/images/og-resume.jpg'
 
+import 'styles/resume.css'
+
 const env = import.meta.env.VERCEL_ENV
 let urlHome = ''
 
@@ -81,7 +83,7 @@ switch (env) {
 		>
 			<div id='profile' class='grid grid-cols-12 gap-0 md:gap-8'>
 				<div class='col-span-full border-t border-gray-400 md:col-span-3'>
-					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1 text-xl md:pl-2'>Profile</h3>
+					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1  md:pl-2'>Profile</h3>
 				</div>
 				<div class='col-span-full pt-4 md:col-span-9 md:pt-2'>
 					<p class='indent-8 text-blue-100'>
@@ -102,7 +104,7 @@ switch (env) {
 
 			<div id='works' class='grid grid-cols-12 md:gap-8'>
 				<div class='col-span-full border-t border-gray-400 md:col-span-3'>
-					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1 text-xl md:pl-2'>
+					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1  md:pl-2'>
 						Work Experience
 					</h3>
 				</div>
@@ -218,7 +220,7 @@ switch (env) {
 
 			<div id='education' class='grid grid-cols-12 md:gap-8'>
 				<div class='col-span-full border-t border-gray-400 md:col-span-3'>
-					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1 text-xl md:pl-2'>Education</h3>
+					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1  md:pl-2'>Education</h3>
 				</div>
 				<div class='col-span-full space-y-4 pt-4 md:col-span-9 md:pt-2'>
 					<div class='justify-between md:flex'>
@@ -246,7 +248,7 @@ switch (env) {
 
 			<div id='skills' class='grid grid-cols-12 md:gap-8'>
 				<div class='col-span-full border-t border-gray-400 md:col-span-3'>
-					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1 text-xl md:pl-2'>Skills</h3>
+					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1  md:pl-2'>Skills</h3>
 				</div>
 				<div class='col-span-full grid grid-cols-3 gap-x-6 pl-4 pt-4 md:col-span-9 md:pl-0 md:pt-2'>
 					<ul class='col-span-full list-disc text-gray-50 md:col-span-1'>
@@ -275,7 +277,7 @@ switch (env) {
 
 			<div id='languages' class='grid grid-cols-12 md:gap-8'>
 				<div class='col-span-full border-t border-gray-400 md:col-span-3'>
-					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1 text-xl md:pl-2'>Languages</h3>
+					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1  md:pl-2'>Languages</h3>
 				</div>
 				<div class='col-span-full space-y-4 pt-4 md:col-span-9 md:pt-2'>
 					<p>
@@ -298,7 +300,7 @@ switch (env) {
 
 			<div id='references' class='grid grid-cols-12 md:gap-8'>
 				<div class='col-span-full border-t border-gray-400 md:col-span-3'>
-					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1 text-xl md:pl-2'>
+					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1  md:pl-2'>
 						References
 					</h3>
 				</div>
