--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -46,7 +46,9 @@ switch (env) {
 			id='header'
 			class='space-y-2 border-r-[12px] border-gray-200 bg-gray-600 px-2 pb-4 pt-8 md:space-y-4 md:border-r-8'
 		>
-			<h1 class='text-center font-head text-5xl md:text-6xl'>Alberto R Cahyantara</h1>
+			<h1 class='space text-center font-head text-5xl md:text-6xl lg:tracking-wide'>
+				Alberto R Cahyantara
+			</h1>
 			<h2 class='text-center font-body text-xl text-blue-100 md:text-2xl'>
 				Front-end / Full-stack Developer
 			</h2>
@@ -58,7 +60,7 @@ switch (env) {
 		>
 			<section id='contacts' class='w-72'>
 				<p
-					class='flex flex-col items-end text-sm leading-4 text-gray-300 md:text-base md:leading-tight'
+					class='flex flex-col items-end text-sm leading-4 text-gray-200 md:text-base md:leading-tight lg:text-lg lg:leading-6'
 				>
 					<span class='font-body not-italic'>Jakarta, Indonesia</span>
 					<span>+62 851 7432 8051 &nbsp;</span>
@@ -68,7 +70,7 @@ switch (env) {
 			<div class='self-center text-xs text-white md:text-base'>&#9679;</div>
 			<section id='socials' class='w-72 font-body'>
 				<p
-					class='flex flex-col text-sm leading-4 text-gray-300 md:flex-col md:text-base md:leading-tight'
+					class='flex flex-col text-sm leading-4 text-gray-200 md:flex-col md:text-base md:leading-tight lg:text-lg lg:leading-6'
 				>
 					<a href='https://www.riolly.dev/'>riolly.dev</a>
 					<a href='https://github.com/riolly'>&nbsp; github.com/riolly</a>
@@ -83,7 +85,7 @@ switch (env) {
 		>
 			<div id='profile' class='grid grid-cols-12 gap-0 md:gap-8'>
 				<div class='col-span-full border-t border-gray-400 md:col-span-3'>
-					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1  md:pl-2'>Profile</h3>
+					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1 md:pl-2'>Profile</h3>
 				</div>
 				<div class='col-span-full pt-4 md:col-span-9 md:pt-2'>
 					<p class='indent-8 text-blue-100'>
@@ -104,9 +106,7 @@ switch (env) {
 
 			<div id='works' class='grid grid-cols-12 md:gap-8'>
 				<div class='col-span-full border-t border-gray-400 md:col-span-3'>
-					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1  md:pl-2'>
-						Work Experience
-					</h3>
+					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1 md:pl-2'>Work Experience</h3>
 				</div>
 
 				<div class='col-span-full flex flex-col gap-4 pt-4 md:col-span-9 md:pt-2'>
@@ -115,7 +115,7 @@ switch (env) {
 							<span class='text-lg font-bold text-blue-100'>Full-stack Developer - Freelance</span>
 							<span class='whitespace-nowrap italic text-slate-400 md:mt-1.5'>July 2022 — now</span>
 						</p>
-						<ul class='ml-4 mt-2 list-disc text-gray-300 md:ml-0'>
+						<ul class='ml-4 mt-2 list-disc text-gray-200 md:ml-0'>
 							<li>
 								Developed full-stack applications using Next.js, utilizing various rendering
 								techniques such as SSG, ISR, and SSR to improve performance and SEO depending on the
@@ -168,7 +168,7 @@ switch (env) {
 								>September 2020 — June 2022</span
 							>
 						</p>
-						<ul class='ml-4 mt-2 list-disc text-gray-300 md:ml-0'>
+						<ul class='ml-4 mt-2 list-disc text-gray-200 md:ml-0'>
 							<li>
 								Led & finished dashboard app revamp project within four months with a new design
 								system, resulting in increased user engagement and improved UX.
@@ -220,7 +220,7 @@ switch (env) {
 
 			<div id='education' class='grid grid-cols-12 md:gap-8'>
 				<div class='col-span-full border-t border-gray-400 md:col-span-3'>
-					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1  md:pl-2'>Education</h3>
+					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1 md:pl-2'>Education</h3>
 				</div>
 				<div class='col-span-full space-y-4 pt-4 md:col-span-9 md:pt-2'>
 					<div class='justify-between md:flex'>
@@ -228,7 +228,7 @@ switch (env) {
 							<p class='text-lg font-bold leading-tight text-blue-100'>
 								Full-stack Javascript Developer
 							</p>
-							<p class='leading-tight text-gray-300'>Hacktiv8 Bootcamp, Jakarta</p>
+							<p class='leading-tight text-gray-200'>Hacktiv8 Bootcamp, Jakarta</p>
 						</div>
 						<p class='whitespace-nowrap italic text-slate-400'>February — June 2020</p>
 					</div>
@@ -237,7 +237,7 @@ switch (env) {
 							<p class='text-lg font-bold leading-tight text-blue-100'>
 								Bachelor of Engineering Physics
 							</p>
-							<p class='leading-tight text-gray-300'>
+							<p class='leading-tight text-gray-200'>
 								Sepuluh Nopember Institute of Technology (ITS), Surabaya
 							</p>
 						</div>
@@ -248,7 +248,7 @@ switch (env) {
 
 			<div id='skills' class='grid grid-cols-12 md:gap-8'>
 				<div class='col-span-full border-t border-gray-400 md:col-span-3'>
-					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1  md:pl-2'>Skills</h3>
+					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1 md:pl-2'>Skills</h3>
 				</div>
 				<div class='col-span-full grid grid-cols-3 gap-x-6 pl-4 pt-4 md:col-span-9 md:pl-0 md:pt-2'>
 					<ul class='col-span-full list-disc text-gray-50 md:col-span-1'>
@@ -277,50 +277,48 @@ switch (env) {
 
 			<div id='languages' class='grid grid-cols-12 md:gap-8'>
 				<div class='col-span-full border-t border-gray-400 md:col-span-3'>
-					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1  md:pl-2'>Languages</h3>
+					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1 md:pl-2'>Languages</h3>
 				</div>
 				<div class='col-span-full space-y-4 pt-4 md:col-span-9 md:pt-2'>
 					<p>
 						<span class='text-blue-100'><b>English</b> as international language</span>
 						<br />
-						<span class='text-gray-300'>Professional working proficiency (C1)</span>
+						<span class='text-gray-200'>Professional working proficiency (C1)</span>
 					</p>
 					<p>
 						<span class='text-blue-100'><b>Bahasa Indonesia</b> as national language</span>
 						<br />
-						<span class='text-gray-300'>Native / bilingual proficiency</span>
+						<span class='text-gray-200'>Native / bilingual proficiency</span>
 					</p>
 					<p>
 						<span class='text-blue-100'><b>Javanese</b> as local language</span>
 						<br />
-						<span class='text-gray-300'>Native / bilingual proficiency</span>
+						<span class='text-gray-200'>Native / bilingual proficiency</span>
 					</p>
 				</div>
 			</div>
 
 			<div id='references' class='grid grid-cols-12 md:gap-8'>
 				<div class='col-span-full border-t border-gray-400 md:col-span-3'>
-					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1  md:pl-2'>
-						References
-					</h3>
+					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1 md:pl-2'>References</h3>
 				</div>
 				<div class='col-span-full grid grid-cols-6 gap-4 pt-4 md:col-span-9 md:gap-6 md:pt-2'>
 					<div class='col-span-full flex flex-col gap-1 md:col-span-3 lg:col-span-2'>
 						<p class='font-bold leading-4 text-blue-100'>Yudhistira Eka Putra</p>
-						<p class='leading-4 text-gray-300'>Lyaeus GmbH</p>
-						<p class='truncate leading-4 text-gray-400 md:mt-1.5'>yudhistira.eka.putra@gmail.com</p>
+						<p class='leading-4 text-gray-200'>Lyaeus GmbH</p>
+						<p class='truncate leading-5 text-gray-400 md:mt-1.5'>yudhistira.eka.putra@gmail.com</p>
 						<p class='leading-4 text-gray-400'>+62 811 8949 797</p>
 					</div>
 					<div class='col-span-full flex flex-col gap-1 md:col-span-3 lg:col-span-2'>
 						<p class='font-bold leading-4 text-blue-100'>Rahmat Gilang Maulana</p>
-						<p class='leading-4 text-gray-300'>Sirclo - sirclo.com</p>
-						<p class='truncate leading-4 text-gray-400 md:mt-1.5'>gilang.maulana@gmail.com</p>
+						<p class='leading-4 text-gray-200'>Sirclo - sirclo.com</p>
+						<p class='truncate leading-5 text-gray-400 md:mt-1.5'>gilang.maulana@gmail.com</p>
 						<p class='leading-4 text-gray-400'>+62 851 5528 1158</p>
 					</div>
 					<div class='col-span-full flex flex-col gap-1 md:col-span-3 lg:col-span-2'>
 						<p class='font-bold leading-4 text-blue-100'>Fadilah Arifki</p>
-						<p class='leading-4 text-gray-300'>Pandatech - pandatech.io</p>
-						<p class='truncate leading-4 text-gray-400 md:mt-1.5'>fadilah.arifki29@gmail.com</p>
+						<p class='leading-4 text-gray-200'>Pandatech - pandatech.io</p>
+						<p class='truncate leading-5 text-gray-400 md:mt-1.5'>fadilah.arifki29@gmail.com</p>
 						<p class='leading-4 text-gray-400'>+62 895 0582 2191</p>
 					</div>
 				</div>
