--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import PlanetLandscape from 'assets/landscape.astro'
 import DialogBox from 'assets/dialog-box.astro'
 import SocialLink from 'assets/social-link.astro'
 import StarsShine from 'assets/stars-shine.astro'
+import 'styles/index.css'
 
 const env = import.meta.env.VERCEL_ENV
 let urlResume = ''
