--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -29,48 +29,88 @@ switch (env) {
 	description='Self-learned, always evolving, front-end/ full-stack developer focused to create engaging and intuitive software.'
 	image={img}
 >
-	<a
-		href={urlHome}
-		class='group fixed bottom-4 right-4 h-10 w-10 rounded-full bg-blue-200 p-2 shadow shadow-blue-100 transition-all hover:bg-blue-600 hover:shadow-blue-500 active:translate-y-1 md:left-4 md:top-4'
-	>
-		<svg viewBox='0 0 576 512' class='text-blue-600 group-hover:text-blue-200'>
-			<path
-				fill='currentColor'
-				d='M303.5 5.7c-9-7.6-22.1-7.6-31.1 0l-264 224c-10.1 8.6-11.3 23.7-2.8 33.8s23.7 11.3 33.8 2.8L64 245.5V432c0 44.2 35.8 80 80 80H432c44.2 0 80-35.8 80-80V245.5l24.5 20.8c10.1 8.6 25.3 7.3 33.8-2.8s7.3-25.3-2.8-33.8l-264-224zM112 432V204.8L288 55.5 464 204.8V432c0 17.7-14.3 32-32 32H384V312c0-22.1-17.9-40-40-40H232c-22.1 0-40 17.9-40 40V464H144c-17.7 0-32-14.3-32-32zm128 32V320h96V464H240z'
-			></path>
-		</svg></a
-	>
+	<div class='fixed bottom-4 right-4 flex h-10 gap-2 md:left-4 md:top-4'>
+		<!-- href={urlHome} -->
+		<button
+			class='flex w-fit gap-3 rounded-full border bg-blue-200/75 p-2 hover:bg-blue-200/75 dark:border-blue-200/20 dark:bg-blue-200/50 dark:hover:border-blue-200/50 md:bg-blue-200/50 md:dark:bg-blue-200/25 xl:border-blue-200/20 xl:bg-blue-200/25'
+		>
+			<label class='cursor-pointer text-white'>
+				<svg
+					viewBox='0 0 576 512'
+					class='h-6 w-6 fill-current stroke-current stroke-2 transition-colors duration-300'
+				>
+					<path
+						fill='currentColor'
+						d='M303.5 5.7c-9-7.6-22.1-7.6-31.1 0l-264 224c-10.1 8.6-11.3 23.7-2.8 33.8s23.7 11.3 33.8 2.8L64 245.5V432c0 44.2 35.8 80 80 80H432c44.2 0 80-35.8 80-80V245.5l24.5 20.8c10.1 8.6 25.3 7.3 33.8-2.8s7.3-25.3-2.8-33.8l-264-224zM112 432V204.8L288 55.5 464 204.8V432c0 17.7-14.3 32-32 32H384V312c0-22.1-17.9-40-40-40H232c-22.1 0-40 17.9-40 40V464H144c-17.7 0-32-14.3-32-32zm128 32V320h96V464H240z'
+					></path>
+				</svg>
+			</label>
+		</button>
+		<button
+			class='flex w-fit gap-3 rounded-full border bg-blue-200/75 p-2 hover:bg-blue-200/75 dark:border-blue-200/20 dark:bg-blue-200/50 dark:hover:border-blue-200/50 md:bg-blue-200/50 md:dark:bg-blue-200/25 xl:border-blue-200/20 xl:bg-blue-200/25'
+			name='theme-toggle'
+		>
+			<label class='cursor-pointer text-blue-600 dark:text-white'>
+				<!-- Sun -->
+				<svg
+					xmlns='http://www.w3.org/2000/svg'
+					class='h-6 w-6 fill-current stroke-current stroke-2 transition-colors duration-300'
+					viewBox='0 0 24 24'
+				>
+					<path
+						stroke-linecap='round'
+						stroke-linejoin='round'
+						d='M12 3v2.25m6.364.386l-1.591 1.591M21 12h-2.25m-.386 6.364l-1.591-1.591M12 18.75V21m-4.773-4.227l-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z'
+					></path>
+				</svg>
+			</label>
+			<label class='cursor-pointer text-white dark:text-blue-600'>
+				<!-- Moon -->
+				<svg
+					xmlns='http://www.w3.org/2000/svg'
+					class='h-6 w-6 fill-current stroke-current transition-colors duration-300'
+					viewBox='0 0 20 20'
+				>
+					<path d='M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z'></path>
+				</svg>
+			</label>
+		</button>
+	</div>
 
-	<div class='mx-auto max-w-screen-xl bg-gray-900 shadow-xl shadow-gray-600'>
+	<div
+		class='mx-auto max-w-screen-xl bg-gray-100 shadow-xl shadow-gray-200 dark:bg-gray-900 dark:shadow-slate-700'
+	>
 		<section
 			id='header'
-			class='space-y-2 border-r-[12px] border-gray-200 bg-gray-600 px-2 pb-4 pt-8 md:space-y-4 md:border-r-8'
+			class='space-y-2 border-r-[12px] border-white bg-gray-300 px-2 pb-4 pt-8 dark:border-gray-200 dark:bg-gray-600 md:space-y-4 md:border-r-8'
 		>
-			<h1 class='space text-center font-head text-5xl md:text-6xl lg:tracking-wide'>
+			<h1 class='space text-center font-head text-5xl dark:text-white md:text-6xl lg:tracking-wide'>
 				Alberto R Cahyantara
 			</h1>
-			<h2 class='text-center font-body text-xl text-blue-100 md:text-2xl'>
+			<h2 class='text-center font-body text-xl text-blue-950 dark:text-gray-100 md:text-2xl'>
 				Front-end / Full-stack Developer
 			</h2>
 		</section>
 
 		<div
 			id='sub-header'
-			class='flex justify-center gap-2 border-r-4 border-gray-200 bg-gray-800 px-4 pb-4 pt-3 md:gap-4 md:border-r-2'
+			class='flex justify-center gap-2 border-r-4 border-white bg-gray-400/75 px-4 pb-3 pt-2 dark:border-gray-200 dark:bg-gray-800 md:gap-4 md:border-r-2 md:pb-4 md:pt-3'
 		>
 			<section id='contacts' class='w-72'>
 				<p
-					class='flex flex-col items-end text-sm leading-4 text-gray-200 md:text-base md:leading-tight lg:text-lg lg:leading-6'
+					class='flex flex-col items-end text-sm leading-[1.1rem] text-slate-800 dark:text-slate-300/75 md:text-base md:leading-tight lg:text-lg lg:leading-6'
 				>
 					<span class='font-body not-italic'>Jakarta, Indonesia</span>
 					<span>+62 851 7432 8051 &nbsp;</span>
 					<span>alberto.cahyantara@gmail<span class='hidden md:inline'>.com</span></span>
 				</p>
 			</section>
-			<div class='self-center text-xs text-white md:text-base'>&#9679;</div>
+			<div class='self-center text-xs text-white dark:text-gray-900 md:text-base dark:md:text-2xl'>
+				&#9679;
+			</div>
 			<section id='socials' class='w-72 font-body'>
 				<p
-					class='flex flex-col text-sm leading-4 text-gray-200 md:flex-col md:text-base md:leading-tight lg:text-lg lg:leading-6'
+					class='flex flex-col text-sm leading-[1.1rem] text-slate-800 dark:text-slate-300/75 md:flex-col md:text-base md:leading-tight lg:text-lg lg:leading-6'
 				>
 					<a href='https://www.riolly.dev/'>riolly.dev</a>
 					<a href='https://github.com/riolly'>&nbsp; github.com/riolly</a>
@@ -85,10 +125,10 @@ switch (env) {
 		>
 			<div id='profile' class='grid grid-cols-12 gap-0 md:gap-8'>
 				<div class='col-span-full border-t border-gray-400 md:col-span-3'>
-					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1 md:pl-2'>Profile</h3>
+					<h3 class='w-fit border-t border-gray-400 pl-0 pr-2 pt-1 md:pl-2'>Profile</h3>
 				</div>
 				<div class='col-span-full pt-4 md:col-span-9 md:pt-2'>
-					<p class='indent-8 text-blue-100'>
+					<p class='indent-8 text-blue-950 dark:text-blue-100'>
 						Self-learned front-end developer focused to create engaging and intuitive UI. With over
 						three years of experience using React and its ecosystem, including Next.js, I prioritize
 						the user experience by optimizing performance. I leverage TypeScript extensively to
@@ -97,7 +137,7 @@ switch (env) {
 						experience building APIs, using ORM/SQL, and managing databases. Active in programming
 						community make me stay up-to-date with the latest technology.
 					</p>
-					<p class='indent-8 text-blue-100'>
+					<p class='indent-8 dark:text-blue-100'>
 						I am looking for collaborative and supportive environment where we can grow together as
 						a team through solving problem and build innovative product.
 					</p>
@@ -106,16 +146,20 @@ switch (env) {
 
 			<div id='works' class='grid grid-cols-12 md:gap-8'>
 				<div class='col-span-full border-t border-gray-400 md:col-span-3'>
-					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1 md:pl-2'>Work Experience</h3>
+					<h3 class='w-fit border-t border-gray-400 pl-0 pr-2 pt-1 md:pl-2'>Work Experience</h3>
 				</div>
 
 				<div class='col-span-full flex flex-col gap-4 pt-4 md:col-span-9 md:pt-2'>
 					<div>
 						<p class='justify-between leading-4 md:flex'>
-							<span class='text-lg font-bold text-blue-100'>Full-stack Developer - Freelance</span>
-							<span class='whitespace-nowrap italic text-slate-400 md:mt-1.5'>July 2022 — now</span>
+							<span class='text-lg font-bold text-blue-950 dark:text-blue-100'
+								>Full-stack Developer - Freelance</span
+							>
+							<span class='whitespace-nowrap italic text-slate-500 dark:text-slate-400 md:mt-1.5'
+								>July 2022 — now</span
+							>
 						</p>
-						<ul class='ml-4 mt-2 list-disc text-gray-200 md:ml-0'>
+						<ul class='ml-4 mt-2 list-disc text-gray-800 dark:text-gray-200 md:ml-0'>
 							<li>
 								Developed full-stack applications using Next.js, utilizing various rendering
 								techniques such as SSG, ISR, and SSR to improve performance and SEO depending on the
@@ -163,12 +207,14 @@ switch (env) {
 
 					<div>
 						<p class='justify-between leading-4 md:flex'>
-							<span class='text-lg font-bold text-blue-100'>Front-end Developer at Achiko AG</span>
-							<span class='whitespace-nowrap italic text-slate-400 md:mt-1.5'
+							<span class='text-lg font-bold text-blue-950 dark:text-blue-100'
+								>Front-end Developer at Achiko AG</span
+							>
+							<span class='whitespace-nowrap italic text-slate-500 dark:text-slate-400 md:mt-1.5'
 								>September 2020 — June 2022</span
 							>
 						</p>
-						<ul class='ml-4 mt-2 list-disc text-gray-200 md:ml-0'>
+						<ul class='ml-4 mt-2 list-disc text-gray-800 dark:text-gray-200 md:ml-0'>
 							<li>
 								Led & finished dashboard app revamp project within four months with a new design
 								system, resulting in increased user engagement and improved UX.
@@ -220,52 +266,56 @@ switch (env) {
 
 			<div id='education' class='grid grid-cols-12 md:gap-8'>
 				<div class='col-span-full border-t border-gray-400 md:col-span-3'>
-					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1 md:pl-2'>Education</h3>
+					<h3 class='w-fit border-t border-gray-400 pl-0 pr-2 pt-1 md:pl-2'>Education</h3>
 				</div>
 				<div class='col-span-full space-y-4 pt-4 md:col-span-9 md:pt-2'>
 					<div class='justify-between md:flex'>
-						<div class='leading-loose lg:space-y-1'>
-							<p class='text-lg font-bold leading-tight text-blue-100'>
+						<div class='lg:space-y-1'>
+							<p class='text-lg font-bold leading-snug text-blue-950 dark:text-blue-100'>
 								Full-stack Javascript Developer
 							</p>
-							<p class='leading-tight text-gray-200'>Hacktiv8 Bootcamp, Jakarta</p>
+							<p class='leading-snug text-gray-800 dark:text-gray-200'>
+								Hacktiv8 Bootcamp, Jakarta
+							</p>
 						</div>
-						<p class='whitespace-nowrap italic text-slate-400'>February — June 2020</p>
+						<p class='whitespace-nowrap italic text-slate-500 dark:text-slate-400'>
+							February — June 2020
+						</p>
 					</div>
 					<div class='justify-between md:flex'>
-						<div class='leading-loose lg:space-y-1'>
-							<p class='text-lg font-bold leading-tight text-blue-100'>
+						<div class='lg:space-y-1'>
+							<p class='text-lg font-bold leading-snug text-blue-950 dark:text-blue-100'>
 								Bachelor of Engineering Physics
 							</p>
-							<p class='leading-tight text-gray-200'>
+							<p class='leading-snug text-gray-800 dark:text-gray-200'>
 								Sepuluh Nopember Institute of Technology (ITS), Surabaya
 							</p>
 						</div>
-						<p class='whitespace-nowrap italic text-slate-400'>2013 — 2017</p>
+						<p class='whitespace-nowrap italic text-slate-500 dark:text-slate-400'>2013 — 2017</p>
 					</div>
 				</div>
 			</div>
 
 			<div id='skills' class='grid grid-cols-12 md:gap-8'>
 				<div class='col-span-full border-t border-gray-400 md:col-span-3'>
-					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1 md:pl-2'>Skills</h3>
+					<h3 class='w-fit border-t border-gray-400 pl-0 pr-2 pt-1 md:pl-2'>Skills</h3>
 				</div>
 				<div class='col-span-full grid grid-cols-3 gap-x-6 pl-4 pt-4 md:col-span-9 md:pl-0 md:pt-2'>
-					<ul class='col-span-full list-disc text-gray-50 md:col-span-1'>
+					<ul class='col-span-full list-disc text-gray-900 dark:text-gray-50 md:col-span-1'>
 						<li class='font-bold'>Typescript</li>
+						<li class='font-bold'>Next.js / Vercel</li>
 						<li class='font-bold'>React</li>
 						<li>React Native / Expo</li>
-						<li>Next.js / Vercel</li>
 						<li>TailwindCSS / SASS</li>
 					</ul>
-					<ul class='col-span-full list-disc text-gray-100 md:col-span-1'>
+					<ul class='col-span-full list-disc text-gray-800 dark:text-gray-100 md:col-span-1'>
 						<li>tRPC</li>
 						<li>TanStack query, table, router</li>
 						<li>Auth.js / OAuth</li>
 						<li>Zustand / Redux</li>
 						<li>ReactHookForm / Formik</li>
 					</ul>
-					<ul class='col-span-full list-disc text-gray-200 md:col-span-1'>
+					<ul class='col-span-full list-disc text-gray-700 dark:text-gray-200 md:col-span-1'>
 						<li>Prisma / Sequelize</li>
 						<li>MySQL (PlanetScale)</li>
 						<li>Astro</li>
@@ -277,52 +327,83 @@ switch (env) {
 
 			<div id='languages' class='grid grid-cols-12 md:gap-8'>
 				<div class='col-span-full border-t border-gray-400 md:col-span-3'>
-					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1 md:pl-2'>Languages</h3>
+					<h3 class='w-fit border-t border-gray-400 pl-0 pr-2 pt-1 md:pl-2'>Languages</h3>
 				</div>
 				<div class='col-span-full space-y-4 pt-4 md:col-span-9 md:pt-2'>
 					<p>
-						<span class='text-blue-100'><b>English</b> as international language</span>
+						<span class=''><b>English</b> as international language</span>
 						<br />
-						<span class='text-gray-200'>Professional working proficiency (C1)</span>
+						<span class='text-gray-800 dark:text-gray-200'>Professional working proficiency</span>
 					</p>
 					<p>
-						<span class='text-blue-100'><b>Bahasa Indonesia</b> as national language</span>
+						<span class=''><b>Bahasa Indonesia</b> as national language</span>
 						<br />
-						<span class='text-gray-200'>Native / bilingual proficiency</span>
+						<span class='text-gray-800 dark:text-gray-200'>Native / bilingual proficiency</span>
 					</p>
 					<p>
-						<span class='text-blue-100'><b>Javanese</b> as local language</span>
+						<span class=''><b>Javanese</b> as local language</span>
 						<br />
-						<span class='text-gray-200'>Native / bilingual proficiency</span>
+						<span class='text-gray-800 dark:text-gray-200'>Native / bilingual proficiency</span>
 					</p>
 				</div>
 			</div>
 
 			<div id='references' class='grid grid-cols-12 md:gap-8'>
 				<div class='col-span-full border-t border-gray-400 md:col-span-3'>
-					<h3 class='border-gray-400-2 w-fit border-t pl-0 pr-2 pt-1 md:pl-2'>References</h3>
+					<h3 class='w-fit border-t border-gray-400 pl-0 pr-2 pt-1 md:pl-2'>References</h3>
 				</div>
 				<div class='col-span-full grid grid-cols-6 gap-4 pt-4 md:col-span-9 md:gap-6 md:pt-2'>
-					<div class='col-span-full flex flex-col gap-1 md:col-span-3 lg:col-span-2'>
-						<p class='font-bold leading-4 text-blue-100'>Yudhistira Eka Putra</p>
-						<p class='leading-4 text-gray-200'>Lyaeus GmbH</p>
-						<p class='truncate leading-5 text-gray-400 md:mt-1.5'>yudhistira.eka.putra@gmail.com</p>
-						<p class='leading-4 text-gray-400'>+62 811 8949 797</p>
-					</div>
-					<div class='col-span-full flex flex-col gap-1 md:col-span-3 lg:col-span-2'>
-						<p class='font-bold leading-4 text-blue-100'>Rahmat Gilang Maulana</p>
-						<p class='leading-4 text-gray-200'>Sirclo - sirclo.com</p>
-						<p class='truncate leading-5 text-gray-400 md:mt-1.5'>gilang.maulana@gmail.com</p>
-						<p class='leading-4 text-gray-400'>+62 851 5528 1158</p>
-					</div>
-					<div class='col-span-full flex flex-col gap-1 md:col-span-3 lg:col-span-2'>
-						<p class='font-bold leading-4 text-blue-100'>Fadilah Arifki</p>
-						<p class='leading-4 text-gray-200'>Pandatech - pandatech.io</p>
-						<p class='truncate leading-5 text-gray-400 md:mt-1.5'>fadilah.arifki29@gmail.com</p>
-						<p class='leading-4 text-gray-400'>+62 895 0582 2191</p>
-					</div>
+					<p class='col-span-full flex flex-col md:col-span-3 lg:col-span-2'>
+						<span class='font-bold'>Yudhistira Eka Putra</span>
+						<span class='dark:text-gray-200'>Lyaeus GmbH</span>
+						<span class='truncate text-gray-600 dark:text-gray-400'
+							>yudhistira.eka.putra@gmail.com</span
+						>
+						<span class='text-gray-600 dark:text-gray-400'>+62 811 8949 797</span>
+					</p>
+					<p class='col-span-full flex flex-col md:col-span-3 lg:col-span-2'>
+						<span class='font-bold'>Rahmat Gilang Maulana</span>
+						<span class='dark:text-gray-200'>Sirclo - sirclo.com</span>
+						<span class='truncate text-gray-600 dark:text-gray-400'>gilang.maulana@gmail.com</span>
+						<span class='text-gray-600 dark:text-gray-400'>+62 851 5528 1158</span>
+					</p>
+					<p class='col-span-full flex flex-col md:col-span-3 lg:col-span-2'>
+						<span class='font-bold'>Fadilah Arifki</span>
+						<span class='dark:text-gray-200'>Pandatech - pandatech.io</span>
+						<span class='truncate text-gray-600 dark:text-gray-400'>fadilah.arifki29@gmail.com</span
+						>
+						<span class='text-gray-600 dark:text-gray-400'>+62 895 0582 2191</span>
+					</p>
 				</div>
 			</div>
 		</div>
 	</div>
 </Layout>
+
+<script>
+	const html = document.documentElement
+
+	const themeToggle = document.querySelector('[name="theme-toggle"]')
+
+	const getMessage = () => {
+		const theme = html.classList.contains('dark') ? 'light' : 'dark'
+		return `Use ${theme}-mode`
+	}
+
+	themeToggle!.setAttribute('title', getMessage())
+	themeToggle!.setAttribute('aria-label', getMessage())
+	themeToggle!.setAttribute('value', html.classList.contains('dark') ? 'dark' : 'light')
+
+	const toggleTheme = (t: 'light' | 'dark') => {
+		localStorage.setItem('theme', t)
+		html.classList.add(t === 'dark' ? 'dark' : 'light')
+		html.classList.remove(t === 'dark' ? 'light' : 'dark')
+		themeToggle!.setAttribute('title', getMessage())
+		themeToggle!.setAttribute('aria-label', getMessage())
+		themeToggle!.setAttribute('value', t)
+	}
+
+	themeToggle!.addEventListener('click', () => {
+		toggleTheme(html.classList.contains('dark') ? 'light' : 'dark')
+	})
+</script>
