--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -30,8 +30,8 @@ switch (env) {
 	image={img}
 >
 	<div class='fixed bottom-4 right-4 flex h-10 gap-2 md:left-4 md:top-4'>
-		<!-- href={urlHome} -->
-		<button
+		<a
+			href={urlHome}
 			class='flex w-fit gap-3 rounded-full border bg-blue-200/75 p-2 hover:bg-blue-200/75 dark:border-blue-200/20 dark:bg-blue-200/50 dark:hover:border-blue-200/50 md:bg-blue-200/50 md:dark:bg-blue-200/25 xl:border-blue-200/20 xl:bg-blue-200/25'
 		>
 			<label class='cursor-pointer text-white'>
@@ -45,7 +45,7 @@ switch (env) {
 					></path>
 				</svg>
 			</label>
-		</button>
+		</a>
 		<button
 			class='flex w-fit gap-3 rounded-full border bg-blue-200/75 p-2 hover:bg-blue-200/75 dark:border-blue-200/20 dark:bg-blue-200/50 dark:hover:border-blue-200/50 md:bg-blue-200/50 md:dark:bg-blue-200/25 xl:border-blue-200/20 xl:bg-blue-200/25'
 			name='theme-toggle'
