fix theme localStorage

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,6 +22,26 @@ export interface Props {
 		<HeadCommon />
 		<HeadSeo type='website' {...props} />
 		<title>{SITE.title}</title>
+
+		<script is:inline>
+			const html = document.documentElement
+			const theme = (() => {
+				if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
+					return localStorage.getItem('theme')
+				}
+				if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+					return 'dark'
+				}
+				return 'light'
+			})()
+			if (theme === 'light') {
+				html.classList.remove('dark')
+				html.classList.add('light')
+			} else {
+				html.classList.add('dark')
+				html.classList.remove('light')
+			}
+		</script>
 	</head>
 	<body>
 		<slot />
