--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -303,22 +303,28 @@ switch (env) {
 				<div class='col-span-full border-t border-gray-400 md:col-span-3'>
 					<h3 class='w-fit border-t border-gray-400 pl-0 pr-2 pt-1 md:pl-2'>Skills</h3>
 				</div>
-				<div class='col-span-full grid grid-cols-3 gap-x-6 pl-4 pt-4 md:col-span-9 md:pl-0 md:pt-2'>
-					<ul class='col-span-full list-disc text-gray-900 dark:text-gray-50 md:col-span-1'>
+				<div class='col-span-full grid grid-cols-6 gap-x-6 pl-4 pt-4 md:col-span-9 md:pl-0 md:pt-2'>
+					<ul
+						class='col-span-full list-disc text-gray-900 dark:text-gray-50 lg:col-span-3 xl:col-span-2'
+					>
 						<li class='font-bold'>Typescript</li>
 						<li class='font-bold'>Next.js / Vercel</li>
 						<li class='font-bold'>React</li>
 						<li>React Native / Expo</li>
 						<li>TailwindCSS / SASS</li>
 					</ul>
-					<ul class='col-span-full list-disc text-gray-800 dark:text-gray-100 md:col-span-1'>
+					<ul
+						class='col-span-full list-disc text-gray-800 dark:text-gray-100 lg:col-span-3 xl:col-span-2'
+					>
 						<li>tRPC</li>
 						<li>TanStack query, table, router</li>
 						<li>Auth.js / OAuth</li>
 						<li>Zustand / Redux</li>
 						<li>ReactHookForm / Formik</li>
 					</ul>
-					<ul class='col-span-full list-disc text-gray-700 dark:text-gray-200 md:col-span-1'>
+					<ul
+						class='col-span-full list-disc text-gray-700 dark:text-gray-200 lg:col-span-3 xl:col-span-2'
+					>
 						<li>Prisma / Sequelize</li>
 						<li>MySQL (PlanetScale)</li>
 						<li>Astro</li>
@@ -356,7 +362,7 @@ switch (env) {
 					<h3 class='w-fit border-t border-gray-400 pl-0 pr-2 pt-1 md:pl-2'>References</h3>
 				</div>
 				<div class='col-span-full grid grid-cols-6 gap-4 pt-4 md:col-span-9 md:gap-6 md:pt-2'>
-					<p class='col-span-full flex flex-col md:col-span-3 lg:col-span-2'>
+					<p class='col-span-full flex flex-col lg:col-span-3 xl:col-span-2'>
 						<span class='font-bold'>Yudhistira Eka Putra</span>
 						<span class='dark:text-gray-200'>Lyaeus GmbH</span>
 						<span class='truncate text-gray-600 dark:text-gray-400'
@@ -364,13 +370,13 @@ switch (env) {
 						>
 						<span class='text-gray-600 dark:text-gray-400'>+62 811 8949 797</span>
 					</p>
-					<p class='col-span-full flex flex-col md:col-span-3 lg:col-span-2'>
+					<p class='col-span-full flex flex-col lg:col-span-3 xl:col-span-2'>
 						<span class='font-bold'>Rahmat Gilang Maulana</span>
 						<span class='dark:text-gray-200'>Sirclo - sirclo.com</span>
 						<span class='truncate text-gray-600 dark:text-gray-400'>gilang.maulana@gmail.com</span>
 						<span class='text-gray-600 dark:text-gray-400'>+62 851 5528 1158</span>
 					</p>
-					<p class='col-span-full flex flex-col md:col-span-3 lg:col-span-2'>
+					<p class='col-span-full flex flex-col lg:col-span-3 xl:col-span-2'>
 						<span class='font-bold'>Fadilah Arifki</span>
 						<span class='dark:text-gray-200'>Pandatech - pandatech.io</span>
 						<span class='truncate text-gray-600 dark:text-gray-400'>fadilah.arifki29@gmail.com</span
