--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -140,7 +140,7 @@ switch (env) {
 						experience building APIs, using ORM/SQL, and managing databases. Active in programming
 						community make me stay up-to-date with the latest technology.
 					</p>
-					<p class='indent-8 dark:text-blue-100'>
+					<p class='indent-8 text-blue-950 dark:text-blue-100'>
 						I am looking for collaborative and supportive environment where we can grow together as
 						a team through solving problem and build innovative product.
 					</p>
