redaction astro & solid

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -181,11 +181,10 @@ switch (env) {
 								and auth using Clerk.
 							</li>
 							<li>
-								Built a personal website with Astro that achieved a perfect 100 score on Lighthouse.
+								Built a personal website with Astro that achieved a perfect 100 lighthouse score.
 							</li>
 							<li>
-								Enhanced page interactivity with the island architecture with SolidJS framework on
-								it.
+								Enhanced page interactivity with the island architecture with SolidJS framework.
 							</li>
 							<li>
 								Created stunning animations using pure CSS, resulting in visually appealing pages
