--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -29,7 +29,7 @@ switch (env) {
 	description='Self-learned, always evolving, front-end/ full-stack developer focused to create engaging and intuitive software.'
 	image={img}
 >
-	<div class='fixed bottom-4 right-4 flex h-10 gap-2 md:left-4 md:top-4'>
+	<div id='menu-button' class='fixed bottom-4 right-4 flex h-10 gap-2 md:left-4 md:top-4'>
 		<a
 			href={urlHome}
 			class='flex w-fit gap-3 rounded-full border bg-blue-200/75 p-2 hover:bg-blue-200/75 dark:border-blue-200/20 dark:bg-blue-200/50 dark:hover:border-blue-200/50 md:bg-blue-200/50 md:dark:bg-blue-200/25 xl:border-blue-200/20 xl:bg-blue-200/25'
@@ -78,6 +78,7 @@ switch (env) {
 	</div>
 
 	<div
+		id='resume'
 		class='mx-auto max-w-screen-xl bg-gray-100 shadow-xl shadow-gray-200 dark:bg-gray-900 dark:shadow-slate-700'
 	>
 		<section
@@ -153,7 +154,7 @@ switch (env) {
 				</div>
 
 				<div class='col-span-full flex flex-col gap-4 pt-4 md:col-span-9 md:pt-2'>
-					<div>
+					<div id='freelance'>
 						<p class='justify-between leading-4 md:flex'>
 							<span class='text-lg font-bold text-blue-950 dark:text-blue-100'
 								>Full-stack Developer - Freelance</span
@@ -207,7 +208,7 @@ switch (env) {
 						</ul>
 					</div>
 
-					<div>
+					<div id='achiko'>
 						<p class='justify-between leading-4 md:flex'>
 							<span class='text-lg font-bold text-blue-950 dark:text-blue-100'
 								>Front-end Developer at Achiko AG</span
