--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -1,7 +1,6 @@
 ---
 import Layout from 'layouts/Layout.astro'
 import img from 'public/images/og-resume.jpg'
-
 import 'styles/resume.css'
 
 const env = import.meta.env.VERCEL_ENV
@@ -75,6 +74,41 @@ switch (env) {
 				</svg>
 			</label>
 		</button>
+
+		<a
+			href='/resume_light.pdf'
+			download='resume_alberto_front-end_full-stack'
+			class='flex w-fit gap-3 rounded-full border bg-blue-200/75 p-2 hover:bg-blue-200/75 dark:hidden dark:border-blue-200/20 dark:bg-blue-200/50 dark:hover:border-blue-200/50 md:bg-blue-200/50 md:dark:bg-blue-200/25 xl:border-blue-200/20 xl:bg-blue-200/25'
+		>
+			<label class='cursor-pointer text-white'>
+				<svg
+					class='h-6 w-6 fill-current stroke-current stroke-2 transition-colors duration-300'
+					viewBox='0 0 384 512'
+				>
+					<path
+						fill='currentColor'
+						d='M320 480H64c-17.7 0-32-14.3-32-32V64c0-17.7 14.3-32 32-32H192V144c0 26.5 21.5 48 48 48H352V448c0 17.7-14.3 32-32 32zM240 160c-8.8 0-16-7.2-16-16V32.5c2.8 .7 5.4 2.1 7.4 4.2L347.3 152.6c2.1 2.1 3.5 4.6 4.2 7.4H240zM64 0C28.7 0 0 28.7 0 64V448c0 35.3 28.7 64 64 64H320c35.3 0 64-28.7 64-64V163.9c0-12.7-5.1-24.9-14.1-33.9L254.1 14.1c-9-9-21.2-14.1-33.9-14.1H64zM208 240c0-8.8-7.2-16-16-16s-16 7.2-16 16V361.4l-52.7-52.7c-6.2-6.2-16.4-6.2-22.6 0s-6.2 16.4 0 22.6l80 80c6.2 6.2 16.4 6.2 22.6 0l80-80c6.2-6.2 6.2-16.4 0-22.6s-16.4-6.2-22.6 0L208 361.4V240z'
+					></path>
+				</svg>
+			</label>
+		</a>
+		<a
+			href='/resume_dark.pdf'
+			download='resume_alberto_front-end_full-stack_dark'
+			class='hidden w-fit gap-3 rounded-full border bg-blue-200/75 p-2 hover:bg-blue-200/75 dark:flex dark:border-blue-200/20 dark:bg-blue-200/50 dark:hover:border-blue-200/50 md:bg-blue-200/50 md:dark:bg-blue-200/25 xl:border-blue-200/20 xl:bg-blue-200/25'
+		>
+			<label class='cursor-pointer text-white'>
+				<svg
+					class='h-6 w-6 fill-current stroke-current stroke-2 transition-colors duration-300'
+					viewBox='0 0 384 512'
+				>
+					<path
+						fill='currentColor'
+						d='M320 480H64c-17.7 0-32-14.3-32-32V64c0-17.7 14.3-32 32-32H192V144c0 26.5 21.5 48 48 48H352V448c0 17.7-14.3 32-32 32zM240 160c-8.8 0-16-7.2-16-16V32.5c2.8 .7 5.4 2.1 7.4 4.2L347.3 152.6c2.1 2.1 3.5 4.6 4.2 7.4H240zM64 0C28.7 0 0 28.7 0 64V448c0 35.3 28.7 64 64 64H320c35.3 0 64-28.7 64-64V163.9c0-12.7-5.1-24.9-14.1-33.9L254.1 14.1c-9-9-21.2-14.1-33.9-14.1H64zM208 240c0-8.8-7.2-16-16-16s-16 7.2-16 16V361.4l-52.7-52.7c-6.2-6.2-16.4-6.2-22.6 0s-6.2 16.4 0 22.6l80 80c6.2 6.2 16.4 6.2 22.6 0l80-80c6.2-6.2 6.2-16.4 0-22.6s-16.4-6.2-22.6 0L208 361.4V240z'
+					></path>
+				</svg>
+			</label>
+		</a>
 	</div>
 
 	<div
