button alignment on mobile

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -28,7 +28,10 @@ switch (env) {
 	description='Self-learned, always evolving, front-end/ full-stack developer focused to create engaging and intuitive software.'
 	image={img}
 >
-	<div id='menu-button' class='fixed bottom-4 right-4 flex h-10 gap-2 md:left-4 md:top-4'>
+	<div
+		id='menu-button'
+		class='fixed bottom-4 right-4 flex flex-col items-end gap-2 md:left-4 md:top-4 md:h-10 md:flex-row'
+	>
 		<a
 			href={urlHome}
 			class='flex w-fit gap-3 rounded-full border bg-blue-200/75 p-2 hover:bg-blue-200/75 dark:border-blue-200/20 dark:bg-blue-200/50 dark:hover:border-blue-200/50 md:bg-blue-200/50 md:dark:bg-blue-200/25 xl:border-blue-200/20 xl:bg-blue-200/25'
@@ -45,36 +48,6 @@ switch (env) {
 				</svg>
 			</label>
 		</a>
-		<button
-			class='flex w-fit gap-3 rounded-full border bg-blue-200/75 p-2 hover:bg-blue-200/75 dark:border-blue-200/20 dark:bg-blue-200/50 dark:hover:border-blue-200/50 md:bg-blue-200/50 md:dark:bg-blue-200/25 xl:border-blue-200/20 xl:bg-blue-200/25'
-			name='theme-toggle'
-		>
-			<label class='cursor-pointer text-blue-600 dark:text-white'>
-				<!-- Sun -->
-				<svg
-					xmlns='http://www.w3.org/2000/svg'
-					class='h-6 w-6 fill-current stroke-current stroke-2 transition-colors duration-300'
-					viewBox='0 0 24 24'
-				>
-					<path
-						stroke-linecap='round'
-						stroke-linejoin='round'
-						d='M12 3v2.25m6.364.386l-1.591 1.591M21 12h-2.25m-.386 6.364l-1.591-1.591M12 18.75V21m-4.773-4.227l-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z'
-					></path>
-				</svg>
-			</label>
-			<label class='cursor-pointer text-white dark:text-blue-600'>
-				<!-- Moon -->
-				<svg
-					xmlns='http://www.w3.org/2000/svg'
-					class='h-6 w-6 fill-current stroke-current transition-colors duration-300'
-					viewBox='0 0 20 20'
-				>
-					<path d='M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z'></path>
-				</svg>
-			</label>
-		</button>
-
 		<a
 			href='/resume_light.pdf'
 			download='resume_alberto_front-end_full-stack'
@@ -109,6 +82,35 @@ switch (env) {
 				</svg>
 			</label>
 		</a>
+		<button
+			class='flex w-fit gap-3 rounded-full border bg-blue-200/75 p-2 hover:bg-blue-200/75 dark:border-blue-200/20 dark:bg-blue-200/50 dark:hover:border-blue-200/50 md:bg-blue-200/50 md:dark:bg-blue-200/25 xl:border-blue-200/20 xl:bg-blue-200/25'
+			name='theme-toggle'
+		>
+			<label class='cursor-pointer text-blue-600 dark:text-white'>
+				<!-- Sun -->
+				<svg
+					xmlns='http://www.w3.org/2000/svg'
+					class='h-6 w-6 fill-current stroke-current stroke-2 transition-colors duration-300'
+					viewBox='0 0 24 24'
+				>
+					<path
+						stroke-linecap='round'
+						stroke-linejoin='round'
+						d='M12 3v2.25m6.364.386l-1.591 1.591M21 12h-2.25m-.386 6.364l-1.591-1.591M12 18.75V21m-4.773-4.227l-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z'
+					></path>
+				</svg>
+			</label>
+			<label class='cursor-pointer text-white dark:text-blue-600'>
+				<!-- Moon -->
+				<svg
+					xmlns='http://www.w3.org/2000/svg'
+					class='h-6 w-6 fill-current stroke-current transition-colors duration-300'
+					viewBox='0 0 20 20'
+				>
+					<path d='M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z'></path>
+				</svg>
+			</label>
+		</button>
 	</div>
 
 	<div
