--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -27,6 +27,7 @@ switch (env) {
 	title="Alberto Riolly Cahyantara's Resume"
 	description='Self-learned, always evolving, front-end/ full-stack developer focused to create engaging and intuitive software.'
 	image={img}
+	siteTitle='Resume'
 >
 	<div
 		id='menu-button'
