rename file for mobile download

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -50,8 +50,7 @@ switch (env) {
 			</label>
 		</a>
 		<a
-			href='/resume_light.pdf'
-			download='resume_alberto_front-end_full-stack'
+			href='/resume_alberto_front-end_full-stack.pdf'
 			class='flex w-fit gap-3 rounded-full border bg-blue-200/75 p-2 hover:bg-blue-200/75 dark:hidden dark:border-blue-200/20 dark:bg-blue-200/50 dark:hover:border-blue-200/50 md:bg-blue-200/50 md:dark:bg-blue-200/25 xl:border-blue-200/20 xl:bg-blue-200/25'
 		>
 			<label class='cursor-pointer text-white'>
@@ -67,8 +66,7 @@ switch (env) {
 			</label>
 		</a>
 		<a
-			href='/resume_dark.pdf'
-			download='resume_alberto_front-end_full-stack_dark'
+			href='/resume_alberto_front-end_full-stack_dark.pdf'
 			class='hidden w-fit gap-3 rounded-full border bg-blue-200/75 p-2 hover:bg-blue-200/75 dark:flex dark:border-blue-200/20 dark:bg-blue-200/50 dark:hover:border-blue-200/50 md:bg-blue-200/50 md:dark:bg-blue-200/25 xl:border-blue-200/20 xl:bg-blue-200/25'
 		>
 			<label class='cursor-pointer text-white'>
