--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -41,6 +41,7 @@ switch (env) {
 				<svg
 					viewBox='0 0 576 512'
 					class='h-6 w-6 fill-current stroke-current stroke-2 transition-colors duration-300'
+					aria-label='Go to home'
 				>
 					<path
 						fill='currentColor'
@@ -57,6 +58,7 @@ switch (env) {
 				<svg
 					class='h-6 w-6 fill-current stroke-current stroke-2 transition-colors duration-300'
 					viewBox='0 0 384 512'
+					aria-label='Download resume'
 				>
 					<path
 						fill='currentColor'
@@ -73,6 +75,7 @@ switch (env) {
 				<svg
 					class='h-6 w-6 fill-current stroke-current stroke-2 transition-colors duration-300'
 					viewBox='0 0 384 512'
+					aria-label='Download resume on dark mode'
 				>
 					<path
 						fill='currentColor'
