--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -197,8 +197,7 @@ const articles = [
 
 		<section id='blog' class='relative h-screen w-full'>
 			<div class='mx-auto flex max-w-screen-md flex-col items-center px-4 md:px-8 lg:px-0'>
-				<object class='my-2 scale-50 md:scale-75' data='/images/blog-stars.svg' type='image/svg+xml'
-				></object>
+				<object class='my-8' data='/images/blog-stars.svg' type='image/svg+xml'></object>
 
 				<div class='relative space-y-6'>
 					{
