--- a/src/layouts/Blogs.astro
+++ b/src/layouts/Blogs.astro
@@ -29,14 +29,16 @@ const {
       src={image.url_landscape}
       alt={image.alt}
       format='jpg'
-      width={1461}
-      height={767}
+      width={1200}
+      height={630}
       class='h-96'
     />
 
-    <h1 class='mx-6 pb-8 pt-12 font-head text-5xl text-white'>{title}</h1>
-    <div class='mx-12'>
-      <slot />
+    <h1 class='text-center lg:mt-12 lg:px-16'>{title}</h1>
+    <div class='mx-auto max-w-screen-md'>
+      <div class=''>
+        <slot />
+      </div>
     </div>
   </main>
 </Layout>
