remove italic on link

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -5,7 +5,7 @@
 	h2,
 	h3,
 	h4 {
-		@apply font-head tracking-wide text-gray-900 dark:text-white;
+		@apply font-head tracking-wide text-white;
 	}
 	h1 {
 		@apply text-3xl md:text-xl lg:mb-8 lg:text-5xl lg:leading-[3.5rem];
@@ -20,6 +20,6 @@
 	}
 
 	a {
-		@apply italic text-blue-300 underline;
+		@apply text-blue-300 underline;
 	}
 }
